Related: tdf#162093 TableRef item specifier may occur standalone

also in lexical canner.

Change-Id: Ic265bbd8a0d9baa81039b8d1748c63ad6686bfc2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170989
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins